# slogi

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp
